hardware/simulador_ruido/build/log/idf_py_stderr_output_35901
Command: make -j 13 all
CMake Deprecation Warning at /Users/jpedroriverop/esp/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/Users/jpedroriverop/proyectos/proyecto-ruido-iot/hardware/simulador_ruido/main/simulador_ruido.c: In function 'simulador_ruido_task':
/Users/jpedroriverop/proyectos/proyecto-ruido-iot/hardware/simulador_ruido/main/simulador_ruido.c:27:58: error: format '%d' expects argument of type 'int', but argument 4 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
   27 |         snprintf(mensaje, sizeof(mensaje), "{\"ruido\": %d}", ruido_db);
      |                                                         ~^    ~~~~~~~~
      |                                                          |    |
      |                                                          int  uint32_t {aka long unsigned int}
      |                                                         %ld
/Users/jpedroriverop/proyectos/proyecto-ruido-iot/hardware/simulador_ruido/main/simulador_ruido.c: In function 'mqtt_app_start':
/Users/jpedroriverop/proyectos/proyecto-ruido-iot/hardware/simulador_ruido/main/simulador_ruido.c:64:10: error: 'esp_mqtt_client_config_t' has no member named 'uri'
   64 |         .uri = "mqtt://192.168.0.122",  // IP local del broker Mosquitto
      |          ^~~
/Users/jpedroriverop/proyectos/proyecto-ruido-iot/hardware/simulador_ruido/main/simulador_ruido.c:63:47: error: missing braces around initializer [-Werror=missing-braces]
   63 |     const esp_mqtt_client_config_t mqtt_cfg = {
      |                                               ^
   64 |         .uri = "mqtt://192.168.0.122",  // IP local del broker Mosquitto
      |                {{
   65 |     };
      |     }}
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/simulador_ruido.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
